--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -1,33 +1,47 @@
-<p id="notice"><%= notice %></p>
+<div class="basic-grey">
+  <p id="notice"><%= notice %></p>
+  <h1><%= "#{t('messages.listing')} #{@addresses.model.model_name.human(count: @addresses.count)}" %></h1>
 
-<h1>Addresses</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Street</th>
-      <th>City</th>
-      <th>State</th>
-      <th>Contact</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @addresses.each do |address| %>
+  <%= link_to new_address_path do %>
+    <% image_tag('if_sign-add_299068.png')%>
+  <% end %>
+  <br/>
+  <table>
+    <thead>
       <tr>
-        <td><%= address.street %></td>
-        <td><%= address.city %></td>
-        <td><%= address.state %></td>
-        <td><%= address.contact %></td>
-        <td><%= link_to 'Show', address %></td>
-        <td><%= link_to 'Edit', edit_address_path(address) %></td>
-        <td><%= link_to 'Destroy', address, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th><%= @addresses.model.human_attribute_name("street")%></th>
+        <th><%= @addresses.model.human_attribute_name("Cidade")%></th>
+        <th><%= @addresses.model.human_attribute_name("Estado")%></th>
+        <th><%= @addresses.model.human_attribute_name("Contato")%></th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
-
-<%= link_to 'New Address', new_address_path %>
+    <tbody>
+      <% @addresses.each do |address| %>
+        <tr class="<%= cycle("odd", "even") -%>">
+          <td><%= address.street %></td>
+          <td><%= address.city %></td>
+          <td><%= address.state %></td>
+          <td><%= address.contact.name %></td>
+           <td>
+            <%= link_to(address, html_options = {"title" => t('buttons.show')})  do %>
+              <%= image_tag('if_user-id_285641.png')%>
+            <% end %>
+          </td>
+          <td>
+            <%= link_to(edit_address_path(address), html_options = {"title" => t('buttons.edit')}) do %>
+              <%= image_tag('if_notepad_285631.png')%>
+            <% end %>
+          </td>
+          <td>
+            <%= link_to address, method: :delete, data: { confirm: t('messages.confirm')}  do %>
+              <%= image_tag('if_sign-error_299045.png')%>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <br>
+</div>
