--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,33 +1,43 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Contacts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Kind</th>
-      <th>Rmk</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @contacts.each do |contact| %>
+<div class="basic-grey">
+  <p id="notice"><%= notice %></p>
+  <h1><%= "#{t('messages.listing')} #{@contacts.model.model_name.human(count: @contacts.count)}"%></h1>
+  
+  <%= link_to new_contact_path do %>
+    <% image_tag('if_sign-add_299068.png')%>
+  <% end %>
+  <br/>
+  <table>
+    <thead>
       <tr>
-        <td><%= contact.name %></td>
-        <td><%= contact.email %></td>
-        <td><%= contact.kind %></td>
-        <td><%= contact.rmk %></td>
-        <td><%= link_to 'Show', contact %></td>
-        <td><%= link_to 'Edit', edit_contact_path(contact) %></td>
-        <td><%= link_to 'Destroy', contact, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th><%= @contacts.model.human_attribute_name("name")%></th>
+        <th><%= @contacts.model.human_attribute_name("kind_id")%></th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
-
-<%= link_to 'New Contact', new_contact_path %>
+    <tbody>
+      <% @contacts.each do |contact| %>
+        <tr class="<%= cycle("odd", "even") -%>">
+          <td><%= contact.name %></td>
+          <td><%= contact.kind.description %></td>
+          <td>
+            <%= link_to(contact, html_options = {"title" => t('buttons.show')})  do %>
+              <%= image_tag('if_user-id_285641.png')%>
+            <% end %>
+          </td>
+          <td>
+            <%= link_to(edit_contact_path(contact), html_options = {"title" => t('buttons.edit')}) do %>
+              <%= image_tag('if_notepad_285631.png')%>
+            <% end %>
+          </td>
+          <td>
+            <%= link_to contact, method: :delete, data: { confirm: t('messages.confirm')}  do %>
+              <%= image_tag('if_sign-error_299045.png')%>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <br>
+</div>
