--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,25 @@
-<h1>Seja bem-vindo!</h1>
-
-<ul>
-  <li><%= link_to "Tipos", kinds_path %></li>
-  <li><%= link_to "Contatos", contacts_path %></li>
-  <li><%= link_to "Endereços", addresses_path %></li>
-  <li><%= link_to "Telefones", phones_path  %></li>
-</ul>
+<div class="basic-grey">
+  <h1>Agenda de Contatos</h1>
+  <ul class="menu">
+    <li>
+      <%= link_to(contacts_path, html_options = {"title" => "Contatos"})  do %>
+        <%= image_tag("if_contacts_1055082.png") %>
+      <% end %>
+    </li>
+    <li>
+      <%= link_to(addresses_path, html_options = {"title" => "Endereços"})  do %>
+        <%= image_tag("if_crossroads_1055077.png") %>
+      <% end %>  
+    </li>
+    <li>
+      <%= link_to(phones_path, html_options = {"title" => "Telefones"})  do %>
+        <%= image_tag("if_phone_1055012.png") %>
+      <% end %>
+    </li>
+    <li>
+      <%= link_to(kinds_path, html_options = {"title" => "Tipos de Contatos"})  do %>
+         <%= image_tag("if_art_1055118.png") %>
+      <% end %>
+    </li>
+  </ul>
+</div>
