--- a/app/views/kinds/_form.html.erb
+++ b/app/views/kinds/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-<h1>New Kind</h1>
+  <h1><%= kind.model_name.human(count: 1)%></h1>
 
   <div class="field">
     <%= form.label :description %>
@@ -19,7 +19,7 @@
   </div>
 
   <div class="actions">
-    <%= form.submit "Enviar", class: "button" %>
-    <%= link_to 'Back', kinds_path, class: "button" %>
+    <%= form.submit t('buttons.save'), class: "button" %>
+    <%= link_to t('buttons.back'), kinds_path, class: "button" %>
   </div>
 <% end %>
