--- a/app/views/phones/index.html.erb
+++ b/app/views/phones/index.html.erb
@@ -1,29 +1,42 @@
-<p id="notice"><%= notice %></p>
+<div class='basic-grey'>
+  <p id="notice"><%= notice %></p>
 
-<h1>Phones</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Phone</th>
-      <th>Contact</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @phones.each do |phone| %>
+  <h1><%= "#{t('messages.listing')} #{@phones.model.model_name.human(count: @phones.count)}"%></h1>
+   <%= link_to new_phone_path do %>
+    <% image_tag('if_sign-add_299068.png')%>
+  <% end %>
+  <br/>
+  <table>
+    <thead>
       <tr>
-        <td><%= phone.phone %></td>
-        <td><%= phone.contact %></td>
-        <td><%= link_to 'Show', phone %></td>
-        <td><%= link_to 'Edit', edit_phone_path(phone) %></td>
-        <td><%= link_to 'Destroy', phone, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th><%= @phones.model.human_attribute_name("phone")%></th>
+        <th><%= @phones.model.human_attribute_name("contact_id")%></th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Phone', new_phone_path %>
+    </thead>
+    <tbody>
+      <% @phones.each do |phone| %>
+        <tr class="<%= cycle("odd", "even") -%>">
+          <td><%= phone.phone %></td>
+          <td><%= phone.contact.name %></td>
+          <td>
+            <%= link_to(phone, html_options = {"title" => t('buttons.show')})  do %>
+              <%= image_tag('if_user-id_285641.png')%>
+            <% end %>
+          </td>
+          <td>
+            <%= link_to(edit_phone_path(phone), html_options = {"title" => t('buttons.edit')}) do %>
+              <%= image_tag('if_notepad_285631.png')%>
+            <% end %>
+          </td>
+          <td>
+            <%= link_to phone, method: :delete, data: { confirm: t('messages.confirm')}  do %>
+              <%= image_tag('if_sign-error_299045.png')%>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <br>
+</div>
