--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -5,7 +5,6 @@
     max-width: 700px;
     background: #F7F7F7;
     padding: 25px 15px 25px 10px;
-    font: 16px Georgia, "Times New Roman", Times, serif;
     color: #888;
     text-shadow: 1px 1px 1px #FFF;
     border:1px solid #E4E4E4;
@@ -33,6 +32,14 @@
     padding-right: 10px;
     margin-top: 10px;
     color: #888;
+}
+.basic-grey div.field_with_errors>label {
+    float: left;
+    width: 20%;
+    text-align: right;
+    padding-right: 10px;
+    margin-top: 10px;
+    color: #DC2626;
 }
 table{
     width: 100%;
@@ -76,7 +83,7 @@ table{
     background: #FFF asset-url('down-arrow.png') no-repeat right;
     background: #FFF asset-url('down-arrow.png') no-repeat right;
     appearance:none;
-    -webkit-appearance:none; 
+    -webkit-appearance:none;
     -moz-appearance: none;
     text-indent: 0.01px;
     text-overflow: '';
