--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,7 +1,10 @@
 <div class="basic-grey">
-  <p id="notice"><%= notice %></p>
+
+  <script type="text/javascript">
+    $.notify("<%= notice %>", "success")
+  </script>
   <h1><%= "#{t('messages.listing')} #{@contacts.model.model_name.human(count: @contacts.count)}"%></h1>
-  
+
   <%= link_to new_contact_path do %>
     <% image_tag('if_sign-add_299068.png')%>
   <% end %>
@@ -11,7 +14,7 @@
       <tr>
         <th><%= @contacts.model.human_attribute_name("name")%></th>
         <th><%= @contacts.model.human_attribute_name("kind_id")%></th>
-        <th colspan="3"></th>
+        <th colspan="2"></th>
       </tr>
     </thead>
 
@@ -20,11 +23,6 @@
         <tr class="<%= cycle("odd", "even") -%>">
           <td><%= contact.name %></td>
           <td><%= contact.kind.description %></td>
-          <td>
-            <%= link_to(contact, html_options = {"title" => t('buttons.show')})  do %>
-              <%= image_tag('if_user-id_285641.png')%>
-            <% end %>
-          </td>
           <td>
             <%= link_to(edit_contact_path(contact), html_options = {"title" => t('buttons.edit')}) do %>
               <%= image_tag('if_notepad_285631.png')%>
@@ -40,4 +38,6 @@
     </tbody>
   </table>
   <br>
+
+  <%= paginate @contacts%>
 </div>
